--- a/about-the-book.html
+++ b/about-the-book.html
@@ -28,10 +28,7 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="#">About the Author</a></li>
-          <li class="active"><a href="#">About The Book</a></li>
-          <li><a href="#">Blogs</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li class="active"><a href="about-the-book.html">About the Book</a></li>
         </ul>
       </nav>
       <div class="hamburger-menu">
@@ -84,7 +81,7 @@
                 but also the fascinating stories of the people who reside within
                 its walls.
               </p>
-              <a href="/" class="btn btn-primary">AUDIOBOOK</a>
+              <a href="https://www.amazon.com/dp/B0D7NHQ4GB" target="_blank" class="btn btn-primary">AUDIOBOOK</a>
               <!-- Hidden on desktop/tablet/mobile -->
               <div class="why-preference d-none">
                 <h3>Choose your Preferrence</h3>
@@ -189,15 +186,15 @@
             <div class="col-lg-3 col-md-6 mb-4">
               <h4>Contact Info</h4>
               <ul class="list-unstyled contact-info-list">
-                <li>
-                  <i class="bi bi-geo-alt-fill"></i>
-                  <span>
-                    Email:<br />
-                    <a href="mailto:info@davidmurrayanderson.com">
-                      info@davidmurrayanderson.com
-                    </a>
-                  </span>
-                </li>
+<!--                <li>-->
+<!--                  <i class="bi bi-geo-alt-fill"></i>-->
+<!--                  <span>-->
+<!--                    Email:<br />-->
+<!--                    <a href="mailto:info@davidmurrayanderson.com">-->
+<!--                      info@davidmurrayanderson.com-->
+<!--                    </a>-->
+<!--                  </span>-->
+<!--                </li>-->
               </ul>
             </div>
             <div class="col-lg-2 col-md-6 mb-4">
