--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="#">About the Author</a></li>
-          <li><a href="/about-the-book.html">About The Book</a></li>
-          <li><a href="#">Blogs</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="about-the-book.html">About the Book</a></li>
         </ul>
       </nav>
       <div class="hamburger-menu">
@@ -60,30 +57,34 @@
                 takes an unforeseen turn.
               </p>
               <div class="hero-buttons">
-                <a href="#" class="btn btn-primary">Purchase Now</a>
+                <a href="https://www.amazon.com/dp/B0D7NHQ4GB" target="_blank" class="btn btn-primary">Purchase Now</a>
                 <a href="#" class="btn btn-secondary">About Book</a>
               </div>
+            </div>
+
+          </div>
+          <div class="col-lg-5">
+            <div class="hero-video-overlay d-sm-none">
+              <a
+                      href="videos/video.mp4"
+                      class="hero-video-link glightbox"
+                      data-gallery="video"
+              >
+                <div class="hero-video-play-btn">
+                  <div class="play-icon"></div>
+                  <span>Watch Video</span>
+                </div>
+              </a>
             </div>
           </div>
         </div>
         <div class="hero-contact">
-          <a href="mailto:info@davidmurrayanderson.com">
-            <i class="bi bi-envelope-fill"></i> info@davidmurrayanderson.com
-          </a>
+<!--          <a href="mailto:info@davidmurrayanderson.com">-->
+<!--            <i class="bi bi-envelope-fill"></i> info@davidmurrayanderson.com-->
+<!--          </a>-->
         </div>
       </div>
-      <div class="hero-video-overlay">
-        <a
-          href="videos/video.mp4"
-          class="hero-video-link glightbox"
-          data-gallery="video"
-        >
-          <div class="hero-video-play-btn">
-            <div class="play-icon"></div>
-            <span>Watch Video</span>
-          </div>
-        </a>
-      </div>
+
     </section>
 
     <!-- ============ ABOUT AUTHOR SECTION ============ -->
@@ -154,7 +155,7 @@
                 of adventure, mystery, and magic that will leave readers
                 mesmerized.
               </p>
-              <a href="/" class="btn btn-primary">AUDIOBOOK</a>
+              <a href="https://www.amazon.com/dp/B0D7NHQ4GB" target="_blank" class="btn btn-primary">AUDIOBOOK</a>
               <!-- Hidden on desktop/tablet/mobile -->
               <div class="why-preference d-none">
                 <h3>Choose your Preferrence</h3>
@@ -412,15 +413,15 @@
             <div class="col-lg-3 col-md-6 mb-4">
               <h4>Contact Info</h4>
               <ul class="list-unstyled contact-info-list">
-                <li>
-                  <i class="bi bi-geo-alt-fill"></i>
-                  <span>
-                    Email:<br />
-                    <a href="mailto:info@davidmurrayanderson.com">
-                      info@davidmurrayanderson.com
-                    </a>
-                  </span>
-                </li>
+<!--                <li>-->
+<!--                  <i class="bi bi-geo-alt-fill"></i>-->
+<!--                  <span>-->
+<!--                    Email:<br />-->
+<!--                    <a href="mailto:info@davidmurrayanderson.com">-->
+<!--                      info@davidmurrayanderson.com-->
+<!--                    </a>-->
+<!--                  </span>-->
+<!--                </li>-->
               </ul>
             </div>
             <div class="col-lg-2 col-md-6 mb-4">
