view video in hero responsive

--- a/index.html
+++ b/index.html
@@ -57,34 +57,34 @@
                 takes an unforeseen turn.
               </p>
               <div class="hero-buttons">
-                <a href="https://www.amazon.com/dp/B0D7NHQ4GB" target="_blank" class="btn btn-primary">Purchase Now</a>
+                <a
+                  href="https://www.amazon.com/dp/B0D7NHQ4GB"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Purchase Now</a
+                >
                 <a href="#" class="btn btn-secondary">About Book</a>
               </div>
-            </div>
-
-          </div>
-          <div class="col-lg-5">
-            <div class="hero-video-overlay d-sm-none">
-              <a
-                      href="videos/video.mp4"
-                      class="hero-video-link glightbox"
-                      data-gallery="video"
-              >
-                <div class="hero-video-play-btn">
-                  <div class="play-icon"></div>
-                  <span>Watch Video</span>
-                </div>
-              </a>
             </div>
           </div>
         </div>
         <div class="hero-contact">
-<!--          <a href="mailto:info@davidmurrayanderson.com">-->
-<!--            <i class="bi bi-envelope-fill"></i> info@davidmurrayanderson.com-->
-<!--          </a>-->
+          <!--          <a href="mailto:info@davidmurrayanderson.com">-->
+          <!--            <i class="bi bi-envelope-fill"></i> info@davidmurrayanderson.com-->
+          <!--          </a>-->
+        </div>
+
+        <div class="video-button-wrapper">
+          <a
+            href="videos/video.mp4"
+            class="video-play-btn glightbox"
+            data-gallery="hero-video"
+          >
+            <i class="bi bi-play-fill"></i>
+            <span>SEE VIDEO</span>
+          </a>
         </div>
       </div>
-
     </section>
 
     <!-- ============ ABOUT AUTHOR SECTION ============ -->
@@ -155,7 +155,12 @@
                 of adventure, mystery, and magic that will leave readers
                 mesmerized.
               </p>
-              <a href="https://www.amazon.com/dp/B0D7NHQ4GB" target="_blank" class="btn btn-primary">AUDIOBOOK</a>
+              <a
+                href="https://www.amazon.com/dp/B0D7NHQ4GB"
+                target="_blank"
+                class="btn btn-primary"
+                >AUDIOBOOK</a
+              >
               <!-- Hidden on desktop/tablet/mobile -->
               <div class="why-preference d-none">
                 <h3>Choose your Preferrence</h3>
@@ -413,15 +418,15 @@
             <div class="col-lg-3 col-md-6 mb-4">
               <h4>Contact Info</h4>
               <ul class="list-unstyled contact-info-list">
-<!--                <li>-->
-<!--                  <i class="bi bi-geo-alt-fill"></i>-->
-<!--                  <span>-->
-<!--                    Email:<br />-->
-<!--                    <a href="mailto:info@davidmurrayanderson.com">-->
-<!--                      info@davidmurrayanderson.com-->
-<!--                    </a>-->
-<!--                  </span>-->
-<!--                </li>-->
+                <!--                <li>-->
+                <!--                  <i class="bi bi-geo-alt-fill"></i>-->
+                <!--                  <span>-->
+                <!--                    Email:<br />-->
+                <!--                    <a href="mailto:info@davidmurrayanderson.com">-->
+                <!--                      info@davidmurrayanderson.com-->
+                <!--                    </a>-->
+                <!--                  </span>-->
+                <!--                </li>-->
               </ul>
             </div>
             <div class="col-lg-2 col-md-6 mb-4">
