--- a/about-the-book.html
+++ b/about-the-book.html
@@ -207,7 +207,7 @@
                 <li><a href="#">Contact Us</a></li>
               </ul>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
+            <div class="col-lg-3 col-md-6 mb-4 d-none">
               <h4>Contact Form</h4>
               <form>
                 <input
